--- a/app/components/Settings/DialectSelector/DialectSelector.css
+++ b/app/components/Settings/DialectSelector/DialectSelector.css
@@ -18,7 +18,10 @@
 }
 
 .logoImage {
-    width: 100%;
+    height: auto;
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
 }
 
 .logo:hover, .logoSelected {
